#146 | Migrated SAXBuilder to JDOMBuilder